# flash-sinkhorn

./: .gitignore  API.md  GRADIENT_HVP.md  LICENSE  README.md  pyproject.toml
src/flash_sinkhorn/: __init__.py  _autograd.py  c_transform.py  cg.py  hvp.py  implicit_grad.py  samples_loss.py  sinkhorn_solvers.py
src/flash_sinkhorn/bench/: __init__.py  bench_backward.py  bench_forward.py
src/flash_sinkhorn/kernels/: __init__.py  apply_flash.py  apply_ott.py  c_transform_sqeuclid.py  sinkhorn_flashstyle_sqeuclid.py  sinkhorn_triton_apply_fused_sqeuclid.py  sinkhorn_triton_apply_sqeuclid.py  sinkhorn_triton_cg_python_batched.py  sinkhorn_triton_geomloss_sqeuclid.py  sinkhorn_triton_grad_sqeuclid.py  sinkhorn_triton_ott_sqeuclid.py
src/flash_sinkhorn/testing/: __init__.py  reference_hvp.py  reference_sinkhorn.py  test_apply_plan_flashstyle.py  test_c_transform.py  test_flashstyle_parity.py  test_geomloss_sinkhorn_triton.py  test_geomloss_vs_triton.py  test_half_cost.py  test_hvp_parity.py  test_hvp_sqeuclid.py  test_ott_vs_triton.py  test_samples_loss_api.py  test_semi_unbalanced_forward.py  test_sinkhorn_triton.py  test_unbalanced_sinkhorn.py
src/ot_triton/: __init__.py  cg.py  hvp.py  implicit_grad.py  samples_loss.py
src/ot_triton/bench/: bench_backward.py  bench_backward_samplesloss.py  bench_blocksparse_backends.py  bench_forward.py  bench_geomloss.py  bench_geomloss_keops.py  bench_hvp_multiscale_sqeuclid.py  bench_hvp_preconditioner.py  bench_hvp_sqeuclid.py  bench_hvp_vs_ott_hessian_torch.py  bench_multiscale_vs_geomloss.py  bench_ott.py  bench_sinkhorn_geomloss_full.py  bench_sinkhorn_ott_full.py  bench_sinkhorn_triton.py  bench_sizes_eps_fp32_eps0p1.py  profile_multiscale_triton.py  sweep_taskcsr_warps_stages.py
src/ot_triton/kernels/: __init__.py  _common.py  sinkhorn_flashstyle_sqeuclid.py  sinkhorn_triton_apply_blocksparse_sqeuclid.py  sinkhorn_triton_apply_fused_sqeuclid.py  sinkhorn_triton_apply_sqeuclid.py  sinkhorn_triton_cg_dense.py  sinkhorn_triton_cg_python_batched.py  sinkhorn_triton_geomloss_blocksparse_ranges_sqeuclid.py  sinkhorn_triton_geomloss_blocksparse_sqeuclid.py  sinkhorn_triton_geomloss_blocksparse_taskcsr_sqeuclid.py  sinkhorn_triton_geomloss_multiscale_sqeuclid.py  sinkhorn_triton_geomloss_sqeuclid.py  sinkhorn_triton_grad_sqeuclid.py  sinkhorn_triton_ott_sqeuclid.py  sinkhorn_triton_sqeuclid.py
src/ot_triton/testing/: reference_hvp.py  test_apply_blocksparse_sqeuclid.py  test_apply_plan_flashstyle.py  test_blocksparse_ranges_sqeuclid.py  test_blocksparse_taskcsr_sqeuclid.py  test_flashstyle_parity.py  test_geomloss_multiscale_triton.py  test_geomloss_sinkhorn_triton.py  test_geomloss_vs_triton.py  test_half_cost.py  test_hvp_parity.py  test_hvp_sqeuclid.py  test_ott_vs_triton.py  test_samples_loss_api.py  test_semi_unbalanced_forward.py  (+2 more)
(+14 files in other folders)
